# google-gadgets-meego

./: .gitignore  Makefile.am  configure.ac
extensions/: Makefile.am
extensions/analytics_usage_collector/: Makefile.am
extensions/clutter_edit_element/: Makefile.am  clutter_edit_element.cc  clutter_edit_element.h  clutter_edit_impl.cc  clutter_edit_impl.h
extensions/google_gadget_manager/: google_gadget_manager.cc  google_gadget_manager.h
extensions/linux_system_framework/: Makefile.am  linux_system_framework.cc  network_connman.cc  network_connman.h  wireless_connman.cc  wireless_connman.h
gadgets/: Makefile.am
gadgets/gadget_control/: Makefile.am  gadget.gmanifest  main.js  main.xml  plugins.js  thumbnail.js
gadgets/gadget_control/ar/: strings.xml
gadgets/gadget_control/ast/: strings.xml
gadgets/gadget_control/de/: strings.xml
gadgets/gadget_control/en/: strings.xml
gadgets/gadget_control/en-GB/: strings.xml
gadgets/gadget_control/es/: strings.xml
gadgets/gadget_control/fi/: strings.xml
gadgets/gadget_control/fr/: strings.xml
gadgets/gadget_control/gl/: strings.xml
gadgets/gadget_control/id/: strings.xml
gadgets/gadget_control/it/: strings.xml
gadgets/gadget_control/ja/: strings.xml
gadgets/gadget_control/ko/: strings.xml
gadgets/gadget_control/nl/: strings.xml
gadgets/gadget_control/pa/: strings.xml
gadgets/gadget_control/pl/: strings.xml
gadgets/gadget_control/pt-BR/: strings.xml
gadgets/gadget_control/ru/: strings.xml
gadgets/gadget_control/sk/: strings.xml
gadgets/gadget_control/sv/: strings.xml
gadgets/gadget_control/tr/: strings.xml
gadgets/gadget_control/wa/: strings.xml
gadgets/gadget_control/zh-CN/: strings.xml
gadgets/gadget_control/zh-TW/: strings.xml
ggadget/: Makefile.am  decorated_view_host.cc  gadget.cc  gadget.h  host_interface.h  main_view_decorator_base.cc  main_view_decorator_base.h
ggadget/clutter/: Makefile.am  cairo_canvas.cc  cairo_canvas.h  cairo_font.cc  cairo_font.h  cairo_graphics.cc  cairo_graphics.h  cairo_image_base.cc  cairo_image_base.h  hotkey.cc  hotkey.h  key_convert.cc  key_convert.h  main_loop.cc  main_loop.h  menu_builder.cc  menu_builder.h  npapi_plugin_element.cc  npapi_plugin_element.h  pixbuf_image.cc  pixbuf_image.h  rsvg_image.cc  rsvg_image.h  single_view_host.cc  single_view_host.h  tooltip.cc  tooltip.h  utilities.cc  utilities.h  view_actor_binder.cc  view_actor_binder.h
ggadget/gtk/: single_view_host.cc  view_widget_binder.cc
hosts/: Makefile.am
hosts/clutter/: Makefile.am  com.meego.UX.Shell.Panels.gadgets.service.in  gadget_browser_host.h  gadgets-panel.css.in  gadgets-panel.desktop.in.in  main.cc  org.moblin.UX.Shell.Panels.gadgets.service.in  simple_clutter_host.cc  simple_clutter_host.h
hosts/gtk/: gadget_browser_host.h  ggl-gtk.desktop.in  gtk_host_base.cc  gtk_host_base.h  main.cc  simple_gtk_host.cc  simple_gtk_host.h
po/: LINGUAS  Makefile.in.in  POTFILES.in  ar.po  ast.po  ca.po  control_strings.c  cs.po  da.po  da_DK.po  de.po  en_GB.po  es.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  resources_strings.c  ru.po  sk.po  sv.po  tr.po  wa.po  zh_CN.po  zh_TW.po
resources/: Makefile.am  common.js
resources/ar/: strings.xml
resources/ast/: strings.xml
resources/de/: strings.xml
resources/en/: strings.xml
resources/en-GB/: strings.xml
resources/es/: strings.xml
resources/fi/: strings.xml
resources/fr/: strings.xml
resources/gl/: strings.xml
resources/id/: strings.xml
resources/it/: strings.xml
resources/ja/: strings.xml
resources/ko/: strings.xml
resources/nl/: strings.xml
resources/pa/: strings.xml
resources/pl/: strings.xml
resources/pt-BR/: strings.xml
resources/ru/: strings.xml
resources/sk/: strings.xml
resources/sv/: strings.xml
resources/tr/: strings.xml
resources/wa/: strings.xml
resources/zh-CN/: strings.xml
resources/zh-TW/: strings.xml
xdg/: Makefile.am  l10n-reader.c
